# Delta-CAS

./: .gitignore  LICENSE  README.md  compare_test2.py  delta_cas.py  pyproject.toml
Previous Version/Delta-CAS-Single-Draft/V2/: delta_cas_v2.py
Previous Version/Delta-CAS-Single-Draft/delta_cas V1/: __init__.py  agent.py  core.py  epoch.py  intent.py  storage.py
Previous Version/Delta-CAS-Single-Draft/tests/: compare_test.py  test_core.py
src/delta_cas/: __init__.py  agent.py  core.py  intent.py
src:/delta_cas:/: action.py  epoch.py  storage.py
tests/: test_action.py  test_agent.py  test_core.py
