[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-cas"
version = "0.3.0"
description = "Delta-based Compare-And-Swap state management for multi-agent systems"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Alen Pu"}]
keywords = ["multi-agent", "state-management", "cas", "delta", "distributed", "mas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.11"
dependencies = []   # zero hard dependencies

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai    = ["openai>=1.0"]
all       = ["anthropic>=0.20", "openai>=1.0"]
dev       = ["pytest>=7", "pytest-cov", "ruff"]

[project.urls]
Homepage   = "https://github.com/AlenP0510/Delta-CAS"
Repository = "https://github.com/AlenP0510/Delta-CAS"
Issues     = "https://github.com/AlenP0510/Delta-CAS/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["delta_cas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py311"
